deploy/k8s-reference/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stock-analysis
  labels:
    name: stock-analysis
    environment: production
